--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,9 @@
 
 # misc
 .DS_Store
+.env
 .env.local
-.env.development.local
+.env.development.locagit rm --cached .envl
 .env.test.local
 .env.production.local
 
